nlamah/src/main/resources/org/nlamah/QLS/test/error/doublepropertydeclarationerror.qls
stylesheet test
{
	page test
	{
		section "test"
		{
			question question1
			{
				fontsize: 12
				fontsize: 13
			}
		}
	}
	
	default number
	{
		width:1
		width:2
	}
}